--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
     background-color:rgb(174, 224, 240);
     display:flex;
     flex-direction:column;
+    align-items:center;
     height:100vh;
 
 }
@@ -40,4 +41,56 @@ header {
 #cards-container {
     display:flex;
     justify-content:center;
+}
+
+#add-book {
+    width:10%;
+}
+
+.form-popup {
+    display:none;
+    position:absolute;
+    bottom:50%;
+    border: 3px solid #f1f1f1;
+    z-index:9;
+}
+
+.form-container {
+    max-width:400px;
+    border-radius: 2px;
+    padding:10px;
+    background-color:white;
+}
+
+.form-container input[type=text] {
+    width:90%;
+    padding:15px;
+    margin:5px;
+    border:none;
+    background:#f1f1f1;
+}
+
+.form-container input[type=text]:focus {
+    background-color:#ddd;
+    outline:none;
+}
+
+.form-container .btn {
+    background-color:#04AA6D;
+    color:white;
+    padding: 16px;
+    border:none;
+    cursor:pointer;
+    width:100%;
+    margin-bottom:10px;
+    margin-top:10px;
+    opacity:0.8;
+}
+
+.form-container .cancel {
+    background-color: red;
+}
+
+.form-container .btn:hover, .open-button:hover {
+    opacity:1;
 }
