--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     margin:0;
     padding:0;
-    background-color:rgb(174, 224, 240);
+    background-color:rgb(228, 248, 243);
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -19,16 +19,19 @@ header {
 .card { 
     box-shadow: 0.4px 8px 0 rgba(0 , 0, 0, 0.2);
     transition: 0.3s;
-    background-color:white;
+    background-color:rgb(255, 122, 122);
     width:200px;
-    margin: 2%
-    
+    margin: 2%;
+    outline:2px solid white;
+    outline-offset: -5px;
 }
 
 .card:hover {
     box-shadow: 0 20px 8px 0 rgba(0, 0, 0, 0.2);
-    background-color:rgb(243, 210, 149);
-    transform: scale(1.05,1.05)
+    background-color:white;
+    outline:2px solid rgb(255, 122, 122);
+    outline-offset: -5px;
+    transform: scale(1.05,1.05);
 }
 
 .container {
@@ -37,15 +40,29 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #cards-container {
     display:flex;
     justify-content:center;
+    flex-wrap:wrap;
 }
 
 #add-book {
-    width:10%;
+    font-size:40px;
+    outline: 2px solid black;
+    border-radius: 15px;
+    padding:30px;
+    background-color: #f5af54;
+    color:rgb(252, 252, 252);
+    font-weight:bolder;
+    margin:30px;
+}
+
+#add-book:hover {
+    transition:0.5s;
+    background-color:rgb(129, 156, 187)
 }
 
 .form-popup {
@@ -61,7 +78,7 @@ header {
     max-width:400px;
     border-radius: 2px;
     padding:10px;
-    background-color:white;
+    background-color:rgb(129, 156, 187);
 }
 
 .form-container input[type=text] {
@@ -95,4 +112,44 @@ header {
 
 .form-container .btn:hover, .open-button:hover {
     opacity:1;
+}
+
+#guide {
+    display:flex;
+    flex-direction: row;
+    justify-content:center;
+    align-items: center;
+}
+
+h2 { 
+    background-color:white;
+    padding:40px;
+    border:3px solid black;
+    border-radius: 2px;
+    outline: 2px solid rgb(255, 142, 142);
+    outline-offset: -10px;
+}
+
+button.delete, button.read, button.notread {
+    margin:4px;
+    font-size:22px;
+    outline: 2px solid black;
+    border-radius:10px
+}
+
+button.delete:hover, button.read:hover {
+    transition:0.3s;
+    transform: scale(1.1, 1.1)
+}
+
+.delete {
+    background-color: rgb(247, 196, 196);
+}
+
+.read {
+    background-color: rgb(103, 255, 149);
+}
+
+.notread {
+    background-color:rgb(211, 146, 255)
 }
